maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:4: error: not found: value isOverBuggle
  while (!isOverBuggle()){
          ^